policy-test/cis-bundle/proc-mount_template.yaml
# GENERATED CODE, DO NOT EDIT.
# Any changes should be made in the original files in the Policy Controller constraint library: 
#   third_party/src/pod-security-policy/proc-mount/template.yaml
#   src.rego
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spspprocmount
spec:
  crd:
    spec:
      names:
        kind: K8sPSPProcMount
      validation:
        openAPIV3Schema:
          description: Controls the Allowed Proc Mount types for the container.
          properties:
            procMount:
              type: string
  targets:
  - rego: |
      package k8spspprocmount

      violation[{"msg": msg, "details": {}}] {
        c := input_containers[_]
        not input_proc_mount_type_allowed(c)
        msg := sprintf("ProcMount type is not allowed, container: %v. Allowed procMount types: %v", [c.name, input.parameters.procMount])
      }

      input_proc_mount_type_allowed(c) {
        input.parameters.procMount == c.securityContext.procMount
      }

      input_containers[c] {
        c := input.review.object.spec.containers[_]
        c.securityContext.procMount
      }

      input_containers[c] {
        c := input.review.object.spec.initContainers[_]
        c.securityContext.procMount
      }
    target: admission.k8s.gatekeeper.sh
